--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,16 +29,13 @@ img {
   position: absolute;
   z-index: -2;
   width: 100%;
-  max-width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
   overflow: hidden;
 }
 
 .video {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  min-height: 100vh;
   opacity: 0.2;
   margin-left: 5rem;
 }
@@ -157,4 +154,159 @@ img {
   border-radius: 0.5rem;
   width: 160px;
   height: 224px;
+}
+
+@media (max-width: 900px) {
+  .bg-video {
+    background-image: url("https://wallpapers.com/images/hd/yugioh-yugi-on-fire-8a2a9p7gcudgea9f.jpg");
+    opacity: 0.25;
+    background-size: cover;
+    background-position: center;
+  }
+  .video {
+    display: none;
+  }
+
+  .container {
+    align-items: center;
+    justify-content: flex-end;
+    flex-direction: column;
+  }
+
+  .container-left {
+    width: 50%;
+    height: auto;
+    row-gap: 1rem;
+    position: absolute;
+    top: 0;
+  }
+
+  .card-versus-container {
+    margin-top: 10rem;
+  }
+
+  .score-box {
+    padding: 0.5rem;
+  }
+
+  .score-box .score-points,
+  #card-type {
+    font-size: 0.8rem;
+  }
+
+  #card-name {
+    font-size: 0.7rem;
+  }
+
+  .card-details {
+    height: auto;
+    padding: 0.5rem;
+    row-gap: 1rem;
+  }
+
+  .menu-avatar #card-img {
+    width: 7rem;
+    height: auto;
+  }
+
+  .card-box-container {
+    flex-direction: row;
+  }
+
+  .card-box {
+    flex-direction: column;
+    width: 10rem;
+    height: 45rem;
+  }
+
+  .card-infield,
+  #computer-field-card,
+  #player-field-card {
+    width: 9rem;
+    height: 12rem;
+  }
+}
+
+@media (max-width: 720px) {
+  .container {
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+  }
+
+  .container-left {
+    width: 100%;
+    height: 12rem;
+    flex-direction: row;
+    align-items: start;
+    row-gap: 1rem;
+    overflow-x: scroll;
+    top: 0;
+  }
+
+  .card-versus-container {
+    margin-top: 1rem;
+  }
+
+  .score-box {
+    padding: 0.5rem;
+    width: 7rem;
+    text-align: left;
+    align-self: start;
+    margin-top: -0.5rem;
+    left: 10%;
+    position: absolute;
+  }
+
+  .card-details {
+    width: 10rem;
+    height: auto;
+    padding: 0.5rem;
+    row-gap: 0.5rem;
+    position: absolute;
+    left: 10%;
+    line-height: 1rem;
+    top: 5rem;
+    margin-top: -0.75rem;
+  }
+
+  .score-box .score-points,
+  #card-type,
+  #card-name {
+    font-size: 0.6rem;
+  }
+
+  .menu-avatar #card-img {
+    width: 8rem;
+  }
+
+  .card-box-container {
+    flex-direction: column;
+  }
+
+  .card-box {
+    flex-direction: row;
+    width: 100%;
+    height: 10rem;
+    overflow-x: scroll;
+    column-gap: 0.5rem;
+  }
+
+  .card-infield,
+  #computer-field-card,
+  #player-field-card {
+    width: 9rem;
+    height: auto;
+    min-height: 9rem;
+  }
+
+  #computer-cards {
+    margin-top: 12rem;
+  }
+
+  .menu-avatar #card-img {
+    margin-top: -1rem;
+    right: 5%;
+    position: absolute;
+  }
 }
